edit error output

--- a/07-ساختارهای داده داخلی.md
+++ b/07-ساختارهای داده داخلی.md
@@ -306,7 +306,7 @@ t[1] = 4
 <font color=white>
 ---------------------------------------------------------------------------
 TypeError                                 Traceback (most recent call last)
-<ipython-input-23-141c76cb54a2> in <module>()
+<'ipython-input-23-141c76cb54a2'> in <'module'>()
 ----> 1 t[1] = 4
 
 TypeError: 'tuple' object does not support item assignment
@@ -322,7 +322,7 @@ t.append(4)
 <font color=white>
 ---------------------------------------------------------------------------
 AttributeError                            Traceback (most recent call last)
-<ipython-input-24-e8bd1632f9dd> in <module>()
+<'ipython-input-24-e8bd1632f9dd'> in <'module'>()
 ----> 1 t.append(4)
 
 AttributeError: 'tuple' object has no attribute 'append'
