--- a/12-تعریف فشرده لیست.md
+++ b/12-تعریف فشرده لیست.md
@@ -1,1 +1,215 @@
-11
+<div dir=rtl>
+
+
+
+|
+<a href="11-پیمایشگرها.md">پیمایشگرها</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="13-ژنراتورها و عبارات ژنراتور.md">ژنراتورها و عبارات ژنراتور</a>
+|
+
+
+<h1>ساخت لیست به‌صورت فشرده(List Comprehensions)</h1>
+
+
+<p>اگر به‌اندازهٔ کافی کد پایتون بخوانید، بالاخره با ساختار کوتاه و کارآمدی به نام List Comprehension روبه‌رو می‌شوید. این یکی از ویژگی‌هایی است که اگر تا به حال از آن استفاده نکرده‌اید، احتمالاً عاشقش خواهید شد. ساختار آن چیزی شبیه به این است:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+[i for i in range(20) if i % 3 > 0]
+</pre>
+<p dir=ltr>[1, 2, 4, 5, 7, 8, 10, 11, 13, 14, 16, 17, 19]</p>
+
+
+<p>نتیجهٔ این کد، لیستی از عددها است که مضاربِ ۳ را شامل نمی‌شود. شاید این مثال در ابتدا کمی گیج‌کننده به نظر برسد، اما با افزایش آشنایی شما با پایتون، خواندن و نوشتن List Comprehensionها برایتان رفتاری کاملاً طبیعی و بدیهی خواهد شد.</p>
+
+
+<h2>Basic List Comprehensions - لیست‌برداری‌های پایه</h2>
+
+
+<p>لیست‌برداری‌ها در واقع روشی برای فشرده‌کردن یک حلقهٔ for که وظیفهٔ ساخت یک لیست را دارد، در قالب یک خط کوتاه و خوانا هستند. برای مثال، در ادامه یک حلقهٔ for را می‌بینید که لیستِ ۱۲ عدد اولِ مربع‌شده را می‌سازد:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+L = []
+for n in range(12):
+    L.append(n ** 2)
+L
+</pre>
+<p dir=ltr>[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121]</p>
+
+
+
+<p>معادل List Comprehension این حلقه به صورت زیر است:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+[n ** 2 for n in range(12)]
+</pre>
+<p dir=ltr>[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121]</p>
+
+
+<p>مانند بسیاری از دستورات پایتون، تقریباً می‌توان معنای این دستور را به زبان سادهٔ انگلیسی خواند: «یک لیست بساز که شامل مربعِ هر n برای هر n تا ۱۲ باشد».</p>
+
+
+
+<p>بنابراین، نحو پایه‌ای آن به صورت [expr for var in iterable] است، که در آن:</p>
+<li>expr هر عبارت معتبر پایتون است</li>
+<li>var نام یک متغیر است</li>
+<li>iterable هر شیء قابل تکرار (Iterable) در پایتون می‌باشد</li>
+
+
+<h2>Multiple Iteration - تکرار چندگانه</h2>
+
+
+<p>گاهی اوقات می‌خواهید یک لیست را نه فقط از یک مقدار، بلکه از دو مقدار بسازید. برای این کار، کافی است یک عبارت for دیگر در لیست‌برداری اضافه کنید:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+[(i, j) for i in range(2) for j in range(3)]
+</pre>
+<p dir=ltr>[(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2)]</p>
+
+
+<p>توجه کنید که عبارت for دوم نقش شاخص داخلی را دارد و در نتیجه سریع‌ترین تغییر را در لیست حاصل ایجاد می‌کند. این نوع ساختار را می‌توان به سه، چهار یا حتی تعداد بیشتری Iterator در لیست‌برداری گسترش داد، هرچند که در برخی مواقع، خوانایی کد دچار افت خواهد شد!</p>
+
+
+<h2>Conditionals on the Iterator - شرط‌ها روی تکرارگر</h2>
+
+
+<p>می‌توانید با اضافه‌کردن یک شرط به انتهای عبارت، کنترل بیشتری روی تکرار داشته باشید. در اولین مثال این بخش، ما روی تمام عددها از ۱ تا ۲۰ تکرار کردیم، اما مضارب ۳ را حذف کردیم. دوباره به این مثال نگاه کنید و ساختار آن را مشاهده کنید:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+[val for val in range(20) if val % 3 > 0]
+</pre>
+<p dir=ltr>[1, 2, 4, 5, 7, 8, 10, 11, 13, 14, 16, 17, 19]</p>
+
+
+<p>عبارت (i % 3 > 0) مقدار True برمی‌گرداند مگر اینکه مقدار i بر ۳ بخش‌پذیر باشد. باز هم می‌توان معنای آن را به زبان سادهٔ انگلیسی خواند: «یک لیست بساز که شامل هر مقدار تا ۲۰ باشد، اما تنها اگر آن مقدار بر ۳ بخش‌پذیر نباشد».
+زمانی که با این روش راحت شوید، نوشتن آن بسیار ساده‌تر – و فهم آن با یک نگاه – نسبت به نحو معادل حلقهٔ for خواهد بود.</p>
+
+
+<pre dir=ltr>
+<font color=white>
+L = []
+for val in range(20):
+    if val % 3:
+        L.append(val)
+L
+</pre>
+<p dir=ltr>[1, 2, 4, 5, 7, 8, 10, 11, 13, 14, 16, 17, 19]</p>
+
+
+
+<h2>Conditionals on the Value - شرط‌ها روی مقدار</h2>
+
+
+<p>اگر در زبان C برنامه‌نویسی کرده باشید، ممکن است با شرط تک‌خطی که با عملگر ? امکان‌پذیر است آشنا باشید:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+int absval = (val < 0) ? -val : val
+</pre>
+
+
+<p>پایتون چیزی بسیار مشابه این دارد که اغلب در لیست‌برداری‌ها، توابع lambda و سایر جاهایی که یک عبارت ساده مورد نیاز است، استفاده می‌شود:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+val = -10
+val if val >= 0 else -val
+</pre>
+<p dir=ltr>10</p>
+
+
+<p>می‌بینیم که این روش به‌سادگی عملکرد تابع داخلی abs() را تکرار می‌کند، اما این ساختار به شما اجازه می‌دهد کارهای واقعاً جالبی را داخل لیست‌برداری‌ها انجام دهید. این موضوع کمی پیچیده‌تر شده است، اما می‌توانید چیزی شبیه به این انجام دهید:</p>
+
+
+
+
+<pre dir=ltr>
+<font color=white>
+[val if val % 2 else -val
+ for val in range(20) if val % 3]
+</pre>
+<p dir=ltr>[1, -2, -4, 5, 7, -8, -10, 11, 13, -14, -16, 17, 19]</p>
+
+
+
+<p>توجه کنید به شکست خط داخل لیست‌برداری قبل از عبارت for: این در پایتون معتبر است و اغلب روش خوبی برای تقسیم لیست‌برداری‌های طولانی به بخش‌های کوچک‌تر و افزایش خوانایی است. نگاهی بیندازید: کاری که انجام می‌دهیم این است که یک لیست می‌سازیم، مضارب ۳ را حذف می‌کنیم و تمام مضارب ۲ را منفی می‌کنیم.</p>
+
+
+
+<p>وقتی با روال لیست‌برداری‌ها آشنا شدید، به‌راحتی می‌توانید به سایر انواع Comprehensionها بپردازید. نحو آن‌ها عمدتاً مشابه است؛ تنها تفاوت در نوع براکتی است که استفاده می‌کنید.</p>
+
+
+
+<p>برای مثال، با استفاده از براکت‌های پیچ‌دار (curly braces) می‌توانید یک مجموعه (set) با Set Comprehension بسازید:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+{n**2 for n in range(12)}
+</pre>
+<p dir=ltr>{0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121}</p>
+
+
+<p>به یاد داشته باشید که مجموعه (set) یک مجموعه است که هیچ مقدار تکراری‌ای ندارد. Set Comprehension نیز این قانون را رعایت می‌کند و هر مقدار تکراری را حذف می‌کند:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+{a % 3 for a in range(1000)}
+</pre>
+<p dir=ltr>{0, 1, 2}</p>
+
+
+<p>با یک تغییر کوچک، می‌توانید از یک دو نقطه (:) استفاده کنید تا Dict Comprehension بسازید:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+{n:n**2 for n in range(6)}
+</pre>
+<p dir=ltr>{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25}</p>
+
+
+<p>در نهایت، اگر به جای براکت‌های مربعی از پرانتز استفاده کنید، چیزی به دست می‌آورید که به آن Generator Expression گفته می‌شود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+(n**2 for n in range(12))
+</pre>
+<p dir=ltr><'generator object <'genexpr'> at 0x1027a5a50'></p>
+
+
+<p>Generator Expression در واقع همان لیست‌برداری است، با این تفاوت که عناصر به‌صورت درخواستی و نه همه‌به‌همه تولید می‌شوند. سادگی این ساختار، قدرت واقعی این ویژگی زبان را پنهان می‌کند؛ در ادامه، بیشتر به آن خواهیم پرداخت.</p>
+
+
+
+
+|
+<a href="11-پیمایشگرها.md">پیمایشگرها</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="13-ژنراتورها و عبارات ژنراتور.md">ژنراتورها و عبارات ژنراتور</a>
+|
+
+
+
+</div>
