--- a/14-ماژول‌ها و بسته‌ها.md
+++ b/14-ماژول‌ها و بسته‌ها.md
@@ -1,1 +1,180 @@
-13
+<div dir=rtl>
+
+
+|
+<a href="13-ژنراتورها و عبارات ژنراتور.md">ژنراتورها و عبارات ژنراتور</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="15-رشته‌ها و عبارات باقاعده.md">رشته‌ها و عبارات باقاعده</a>
+|
+
+
+<h1>ماژول‌ها و پکیج‌ها</h1>
+
+
+<p>یکی از ویژگی‌های پایتون که آن را برای طیف گسترده‌ای از وظایف مفید می‌کند، این است که پایتون به صورت «با کتابخانهٔ کامل» عرضه می‌شود؛ به این معنا که کتابخانهٔ استاندارد پایتون شامل ابزارهای مفیدی برای انجام طیف وسیعی از وظایف است. علاوه بر این، یک اکوسیستم گسترده از ابزارها و پکیج‌های شخص ثالث وجود دارد که امکانات تخصصی‌تری را ارائه می‌دهند. در اینجا، ما به بررسی نحوهٔ وارد کردن (import) ماژول‌های کتابخانهٔ استاندارد، ابزارهای نصب ماژول‌های شخص ثالث، و توضیحی دربارهٔ چگونگی ساخت ماژول‌های خودتان می‌پردازیم.</p>
+
+
+<h2>بارگذاری ماژول‌ها: دستور import</h2>
+
+
+<p>برای بارگذاری ماژول‌های داخلی و شخص ثالث، پایتون دستور import را فراهم می‌کند. چند روش برای استفاده از این دستور وجود دارد که در اینجا به طور خلاصه آن‌ها را از پرکاربردترین و توصیه‌شده‌ترین تا کم‌تر توصیه‌شده‌ترین ذکر می‌کنیم.</p>
+
+
+<h3>وارد کردن ماژول به‌صورت صریح</h3>
+
+
+<p>وارد کردن صریح یک ماژول، محتوای آن ماژول را در یک فضای نام (namespace) نگه می‌دارد. سپس از این فضای نام برای ارجاع به محتویات آن با استفاده از نقطه (.) بین نام‌ها استفاده می‌شود. به عنوان مثال، در اینجا ماژول داخلی math را وارد می‌کنیم و کسینوس عدد π را محاسبه می‌کنیم:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+import math
+math.cos(math.pi)
+</pre>
+<p dir=ltr>-1.0</p>
+
+
+<h3>وارد کردن صریح ماژول با نام مستعار (alias)</h3>
+
+
+<p>برای نام‌های طولانی ماژول، استفاده از نام کامل ماژول هر بار که به یک عنصر آن دسترسی پیدا می‌کنید، راحت نیست. به همین دلیل، معمولاً از الگوی import ... as ... استفاده می‌کنیم تا نام مستعار کوتاه‌تری برای فضای نام ایجاد کنیم. به عنوان مثال، پکیج NumPy (Numerical Python)، یک پکیج محبوب شخص ثالث که در علوم داده کاربرد دارد، طبق عرف با نام مستعار np وارد می‌شود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+import numpy as np
+np.cos(np.pi)
+</pre>
+<p dir=ltr>-1.0</p>
+
+
+<h3>وارد کردن صریح محتویات ماژول</h3>
+
+
+<p>گاهی اوقات به جای وارد کردن کل فضای نام ماژول، تنها می‌خواهید چند عنصر خاص از آن ماژول را وارد کنید. این کار با الگوی from ... import ... انجام می‌شود. به عنوان مثال، می‌توانیم تنها تابع cos و ثابت pi را از ماژول math وارد کنیم:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+from math import cos, pi
+cos(pi)
+</pre>
+<p dir=ltr>-1.0</p>
+
+
+<h3>وارد کردن غیرصریح محتویات ماژول</h3>
+
+
+<p>در نهایت، گاهی مفید است که تمام محتویات یک ماژول را به فضای نام محلی وارد کنیم. این کار با الگوی from ... import * انجام می‌شود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+from math import *
+sin(pi) ** 2 + cos(pi) ** 2
+</pre>
+<p dir=ltr>1.0</p>
+
+
+<p>این الگو باید با احتیاط و به ندرت استفاده شود، یا حتی بهتر است اصلاً استفاده نشود. مشکل این است که چنین واردکردن‌هایی گاهی می‌توانند نام توابعی را که قصد ندارید بازنویسی کنند، بازنویسی کنند، و ضمنی بودن این دستور باعث می‌شود دشوار باشد که بفهمیم چه چیزی تغییر کرده است.</p>
+
+
+<p>به عنوان مثال، پایتون دارای تابع داخلی sum است که می‌توان از آن برای انجام عملیات مختلف استفاده کرد:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+help(sum)
+</pre>
+<p dir=ltr>Help on built-in function sum in module builtins:<br>
+sum(...)<br>
+sum(iterable[, start]) -> value<br>
+Return the sum of an iterable of numbers (NOT strings) plus the value<br>
+    of parameter 'start' (which defaults to 0).  When the iterable is<br>
+    empty, return start.</p>
+
+
+<p>می‌توانیم از این تابع برای محاسبه مجموع یک دنباله استفاده کنیم، با شروع از یک مقدار مشخص (در اینجا، از -1 شروع می‌کنیم):</p>
+
+
+<pre dir=ltr>
+<font color=white>
+sum(range(5), -1)
+</pre>
+<p dir=ltr>9</p>
+
+
+<p>حال ببینید چه اتفاقی می‌افتد اگر همان فراخوانی تابع را پس از وارد کردن تمام محتویات numpy با import * انجام دهیم:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+from numpy import *
+</pre>
+
+
+
+<pre dir=ltr>
+<font color=white>
+sum(range(5), -1)
+</pre>
+<p dir=ltr>10</p>
+
+
+<p>نتیجه یک واحد اختلاف دارد! دلیل این امر این است که دستور <span dir=ltr>import *</span> تابع داخلی sum را با تابع numpy.sum جایگزین می‌کند، که امضای فراخوانی متفاوتی دارد: در حالت اول، ما مجموع range(5) را با شروع از <span dir=ltr>-1</span> محاسبه می‌کنیم؛ در حالت دوم، مجموع range(5) را در آخرین محور (که با <span dir=ltr>-1</span> مشخص شده) محاسبه می‌کنیم. این نوع موقعیت‌ها زمانی رخ می‌دهند که در استفاده از <span dir=ltr>import *</span> دقت لازم رعایت نشود – به همین دلیل، بهتر است از این دستور اجتناب کنید مگر اینکه دقیقاً بدانید چه کاری انجام می‌دهید.</p>
+
+
+<h2>وارد کردن ماژول‌ها از کتابخانهٔ استاندارد پایتون</h2>
+
+
+<p>کتابخانهٔ استاندارد پایتون شامل بسیاری از ماژول‌های داخلی مفید است که می‌توانید اطلاعات کامل آن‌ها را در مستندات پایتون مطالعه کنید. هر یک از این ماژول‌ها را می‌توان با دستور import وارد کرده و سپس با استفاده از تابع help که در بخش قبلی دیدیم، بررسی کرد. در اینجا فهرستی بسیار ناقص از برخی ماژول‌هایی که ممکن است بخواهید آن‌ها را کاوش و یاد بگیرید، آمده است:</p>
+
+
+<li>os و sys: ابزارهایی برای تعامل با سیستم‌عامل، شامل مرور ساختارهای دایرکتوری فایل و اجرای دستورات شل</li>
+<li>math و cmath: توابع و عملیات ریاضی بر روی اعداد حقیقی و مختلط</li>
+<li>itertools: ابزارهایی برای ساخت و تعامل با ایتراتورها و جنریتورها</li>
+<li>functools: ابزارهایی که در برنامه‌نویسی تابعی (Functional Programming) کمک می‌کنند</li>
+<li>random: ابزارهایی برای تولید اعداد شبه‌تصادفی</li>
+<li>pickle: ابزارهایی برای پایدارسازی اشیاء؛ ذخیرهٔ اشیاء روی دیسک و بارگذاری آن‌ها از دیسک</li>
+<li>json و csv: ابزارهایی برای خواندن فایل‌های با فرمت JSON و CSV</li>
+<li>urllib: ابزارهایی برای انجام درخواست‌های HTTP و دیگر درخواست‌های وب</li>
+
+
+<p>می‌توانید اطلاعات مربوط به این ماژول‌ها و بسیاری دیگر را در مستندات کتابخانهٔ استاندارد پایتون بیابید: <a href=https://docs.python.org/3/library/>https://docs.python.org/3/library/</a>.
+</p>
+
+
+
+<h2>وارد کردن ماژول‌های شخص ثالث</h2>
+
+
+<p>یکی از مواردی که پایتون را به‌ویژه در دنیای علوم داده مفید می‌کند، اکوسیستم ماژول‌های شخص ثالث آن است. این ماژول‌ها را می‌توان مانند ماژول‌های داخلی وارد کرد، اما ابتدا باید آن‌ها را روی سیستم خود نصب کنید. رجیستری استاندارد برای چنین ماژول‌هایی، شاخص پکیج پایتون (Python Package Index یا به اختصار PyPI) است که در وب به آدرس <a href=https://pypi.python.org/>https://pypi.python.org/</a> در دسترس است. برای راحتی، پایتون همراه با برنامه‌ای به نام `pip` عرضه می‌شود (یک مخفف بازگشتی به معنی "pip نصب پکیج‌ها را انجام می‌دهد") که به‌طور خودکار پکیج‌های منتشر شده و فهرست‌شده در PyPI را دریافت می‌کند (اگر از نسخهٔ پایتون ۲ استفاده می‌کنید، `pip` باید جداگانه نصب شود). به عنوان مثال، اگر بخواهید پکیج `supersmoother` که من نوشته‌ام را نصب کنید، کافی است دستور زیر را در خط فرمان وارد کنید:
+</p>
+
+
+<pre dir=ltr>
+<font color=white>
+$ pip install supersmoother
+</pre>
+
+<p>کد منبع این پکیج به‌طور خودکار از مخزن PyPI دانلود شده و پکیج در مسیر استاندارد پایتون نصب می‌شود (به شرطی که اجازهٔ انجام این کار را روی کامپیوتری که استفاده می‌کنید داشته باشید).</p>
+
+
+<p>برای اطلاعات بیشتر دربارهٔ PyPI و نصب‌کنندهٔ `pip`، به مستندات موجود در <a href=https://pypi.python.org/>https://pypi.python.org/</a> مراجعه کنید.
+</p>
+
+
+
+|
+<a href="13-ژنراتورها و عبارات ژنراتور.md">ژنراتورها و عبارات ژنراتور</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="15-رشته‌ها و عبارات باقاعده.md">رشته‌ها و عبارات باقاعده</a>
+|
+
+
+
+</div>
