--- a/17-منابع برای یادگیری بیشتر.md
+++ b/17-منابع برای یادگیری بیشتر.md
@@ -1,1 +1,60 @@
-16
+<div dir=rtl>
+
+
+
+|
+<a href="16-معرفی ابزارهای علم داده.md">معرفی ابزارهای علم داده</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="18-پیوست: کدی برای بازتولید شکل‌ها.md">پیوست: کدی برای بازتولید شکل‌ها</a>
+|
+
+
+
+<h1>منابع برای یادگیری بیشتر</h1>
+
+
+<p>این پایان تور سریع ما از زبان پایتون است. امیدوارم اگر تا اینجا مطالعه کرده‌اید، با نحو (syntax)، معناشناسی (semantics)، عملیات و قابلیت‌های اصلی زبان پایتون آشنا شده باشید و همچنین ایده‌ای از دامنهٔ ابزارها و ساختارهای کد وجود داشته باشد که می‌توانید آن‌ها را به‌طور عمیق‌تر کاوش کنید.</p>
+
+
+<p>من تلاش کرده‌ام بخش‌ها و الگوهای زبان پایتون را که برای یک دانشمند داده در استفاده از پایتون بیشترین کاربرد را دارند پوشش دهم، اما این به هیچ وجه یک معرفی کامل نبوده است. اگر می‌خواهید درک عمیق‌تری از خود زبان پایتون و نحوهٔ استفادهٔ مؤثر از آن پیدا کنید، در اینجا چند منبع را پیشنهاد می‌کنم:</p>
+
+
+<li>کتاب Fluent Python نوشتهٔ لوسیانو رامالهو. این کتاب عالی از انتشارات O’Reilly به بررسی بهترین شیوه‌ها و اصطلاحات متداول در پایتون می‌پردازد و شامل نحوهٔ بهره‌برداری حداکثری از کتابخانهٔ استاندارد نیز می‌شود.</li>
+<li>کتاب Dive Into Python نوشتهٔ مارک پیلگریم. این کتاب آنلاین رایگان، معرفی کاملی از زبان پایتون از پایه ارائه می‌دهد.</li>
+<li>کتاب Learn Python the Hard Way نوشتهٔ زِد شاو. این کتاب از رویکرد «یادگیری از طریق تمرین» پیروی می‌کند و به‌طور عمدی بر توسعهٔ مهارتی تأکید دارد که ممکن است مفیدترین مهارت برای یک برنامه‌نویس باشد: جستجو در گوگل برای چیزهایی که نمی‌فهمید.</li>
+<li>کتاب Python Essential Reference نوشتهٔ دیوید بیزلی. این کتاب ۷۰۰ صفحه‌ای بسیار جامع و خوب نوشته شده است و تقریباً همه چیز دربارهٔ زبان پایتون و کتابخانه‌های داخلی آن را پوشش می‌دهد. برای مطالعه‌ای کاربردی‌تر و متمرکز بر مثال‌های عملی، کتاب Python Cookbook بیزلی توصیه می‌شود.</li>
+
+
+<br><br>
+<p>برای کاوش بیشتر در ابزارهای پایتون برای علوم داده و محاسبات علمی، کتاب‌های زیر را پیشنهاد می‌کنم:</p>
+
+
+<li>کتاب The Python Data Science Handbook نوشتهٔ خودم. این کتاب دقیقاً از جایی که این گزارش پایان می‌یابد آغاز می‌کند و راهنمای جامعی از ابزارهای ضروری در پشتهٔ علوم دادهٔ پایتون ارائه می‌دهد، از پاک‌سازی و دستکاری داده‌ها تا یادگیری ماشین.</li>
+<li>کتاب Effective Computation in Physics نوشتهٔ کیتی هاف و آنتونی اسکاپاتز، برای افرادی فراتر از دنیای پژوهش‌های فیزیک نیز کاربرد دارد. این کتاب یک معرفی گام‌به‌گام و پایه‌ای از محاسبات علمی ارائه می‌دهد و شامل مقدمه‌ای عالی بر بسیاری از ابزارهایی است که در این گزارش به آن‌ها اشاره شده است.</li>
+<li>کتاب Python for Data Analysis نوشتهٔ وس مک‌کینی، خالق پکیج Pandas. این کتاب به‌طور مفصل به کتابخانهٔ Pandas می‌پردازد و همچنین اطلاعات مفیدی دربارهٔ برخی دیگر از ابزارهایی که آن را ممکن می‌سازند ارائه می‌دهد.</li>
+
+
+
+<br><br>
+<p>در نهایت، برای داشتن دیدی گسترده‌تر از منابع موجود، کتاب‌های زیر را توصیه می‌کنم:</p>
+
+
+<li>منابع پایتون O’Reilly: انتشارات O’Reilly مجموعه‌ای از کتاب‌های عالی دربارهٔ خود زبان پایتون و موضوعات تخصصی در دنیای پایتون ارائه می‌دهد.</li>
+<li>کنفرانس‌های PyCon، SciPy و PyData: هر ساله هزاران نفر در این کنفرانس‌ها شرکت می‌کنند و بیشتر برنامه‌های خود را به صورت ویدئوهای آنلاین رایگان آرشیو می‌کنند. این ویدئوها به مجموعه‌ای فوق‌العاده از منابع برای یادگیری خود زبان پایتون، پکیج‌های پایتون و موضوعات مرتبط تبدیل شده‌اند. به‌صورت آنلاین به دنبال ویدئوهای سخنرانی‌ها و آموزش‌ها بگردید: سخنرانی‌ها معمولاً کوتاه‌تر هستند و به معرفی پکیج‌های جدید یا نگاه تازه‌ای به پکیج‌های قدیمی می‌پردازند، در حالی که آموزش‌ها چندین ساعت طول دارند و نحوهٔ استفاده از ابزارهای اشاره‌شده در این گزارش و سایر ابزارها را پوشش می‌دهند.</li>
+
+
+
+<br>
+|
+<a href="16-معرفی ابزارهای علم داده.md">معرفی ابزارهای علم داده</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="18-پیوست: کدی برای بازتولید شکل‌ها.md">پیوست: کدی برای بازتولید شکل‌ها</a>
+|
+
+
+
+</div>
