--- a/18-پیوست: کدی برای بازتولید شکل‌ها.md
+++ b/18-پیوست: کدی برای بازتولید شکل‌ها.md
@@ -1,1 +1,81 @@
-17
+<div dir=rtl>
+
+
+
+|
+<a href="17-منابع برای یادگیری بیشتر.md">منابع برای یادگیری بیشتر</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+
+
+
+
+<h1>ضمیمه: کد شکل‌ها</h1>
+
+
+<p>این بخش شامل کدی است که برای تولید شکل‌هایی که در این گزارش آمده‌اند استفاده شده است.</p>
+
+
+<pre dir=ltr>
+<font color=white>
+%matplotlib inline
+import matplotlib.pyplot as plt
+</pre>
+
+
+<pre dir=ltr>
+<font color=white>
+import os
+if not os.path.exists('fig'):
+    os.makedirs('fig')
+</pre>
+
+
+<br>
+<h2>بخش ۷: ایندکس‌گذاری لیست‌ها</h2>
+
+
+<p>این شکل به درک نحوهٔ کار ایندکس‌گذاری در پایتون کمک می‌کند.</p>
+
+
+<pre dir=ltr>
+<font color=white>
+L = [2, 3, 5, 7, 11]
+
+fig = plt.figure(figsize=(10, 4))
+ax = fig.add_axes([0, 0, 1, 1], xticks=[], yticks=[], frameon=False,
+                  aspect='equal')
+
+for i in range(5):
+    ax.add_patch(plt.Rectangle([i - 0.5, -0.5], 1, 1, fc='none', ec='black'))
+    ax.text(i, -0.05, L[i], size=100,
+            ha='center', va='center', family='monospace')
+    
+for i in range(6):
+    ax.text(i - 0.5, 0.55, str(i), size=20,
+            ha='center', va='bottom', family='monospace')
+    
+for i in range(5):
+    ax.text(i - 0.5, -0.58, str(-5 + i), size=20,
+            ha='center', va='top', family='monospace')
+    
+ax.axis([-0.7, 4.7, -0.7, 0.7]);
+
+fig.savefig('fig/list-indexing.png');
+</pre>
+
+
+<img src=img/list-indexing.png>
+
+
+
+|
+<a href="17-منابع برای یادگیری بیشتر.md">منابع برای یادگیری بیشتر</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+
+
+
+</div>
